syntax = "proto3";

option csharp_namespace = "Catalog.Grpc";

service CatalogGrpcService {
	rpc GetProductById(GetDiscountRequest) returns (ProductListModel);
}

message GetDiscountRequest {
  int32 id = 1;
}

message ProductListModel {
	int32 id = 1;
	string name = 2;
	string currency = 3;
	int64 price = 4;
}